tests/baselines/reference/fieldAndGetterWithSameName.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
fieldAndGetterWithSameName.ts(2,5): error TS2300: Duplicate identifier 'x'.
fieldAndGetterWithSameName.ts(3,7): error TS2300: Duplicate identifier 'x'.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== fieldAndGetterWithSameName.ts (2 errors) ====
    export class C {
        x: number;
        ~
!!! error TS2300: Duplicate identifier 'x'.
      get x(): number { return 1; }
          ~
!!! error TS2300: Duplicate identifier 'x'.
    }